client/src/components/UI/form/style.scss
@import "../../../styles/mixins";
@import "../../../styles/neumorph";

.c-resume-form {

  @include breakpoint(tablet) {
    width: 50%;
    margin-left: 25%;
  }

  @include breakpoint(desktop-sm) {
    margin: 0 auto;
    width: 39%;
  }

  @include breakpoint(desktop-xl) {
    max-width: 500px;
  }

  &.light-mode {

    .c-form-nav button {
      height: 75px;
      width: 75px;
      background: linear-gradient(145deg, #ffffff, #b0bec6);
      border-radius: 100%;
      box-shadow: 8.11px 8.11px 15px #c5d5de, -8.11px -8.11px 15px #edffff;

      &:active {
        background: #d9eaf4;
        border-radius: 100%;
        box-shadow: 8.11px 8.11px 15px #c5d5de, -8.11px -8.11px 15px #edffff;
      }
    }

    .submit-btn {
      background: #d9eaf4;
      box-shadow: 8.11px 8.11px 15px #c5d5de, -8.11px -8.11px 15px #edffff;
      text-shadow: none;
      text-decoration: none;
      text-transform: none;
    }

    .resume-form .segment .list-items,
    .resume-form .segment .c-form-list .list-items {
      border-radius: 50px;
      background: linear-gradient(145deg, #f3ffff, #ccd9e1);
      box-shadow: 7px 7px 14px #bcc8d0, -7px -7px 14px #ffffff;

      label {
        color: #90a7be;
        font-size: 1.25rem;
        font-weight: 900;
      }

      input[type="checkbox"] {

        &:not(:checked) {
          background: linear-gradient(145deg, #FFFFFF, #B4BEC1);
          border-radius: 100%;
          box-shadow: 9.91px 9.91px 15px #C9D5D9, -9.91px -9.91px 15px #F1FFFF;
        }

        &:checked {
          background: linear-gradient(145deg, #A9B2B5, #FFFFFF);
          border-radius: 100%;
          box-shadow: 8.11px 8.11px 22px #C9D5D9, -8.11px -8.11px 22px #F1FFFF;
        }
      }


      input,
      textarea {
        color: #474747;
        border-radius: 49px;
        background: #d9eaf4;
        box-shadow: inset 7px 7px 14px #bcc8d0, inset -7px -7px 14px #ffffff;
        text-shadow: none;
      }

      textarea {
        padding: 16px 22px;
      }
    }
  }

  .c-form-nav {
    position: relative;
    transform: translateY(-123px);
    width: 50%;
    z-index: 10;
    margin-left: 10vw;

    &.on-contact-form {
      transform: translateY(-57px);
      width: 100%;
      margin-top: 40px;

      @include breakpoint(tablet) {
        margin-top: 20px;
      }

      button.next-btn {
       
        @include breakpoint(tablet) {
          transform: translateY(40px);
        }
      }
    }

    @include breakpoint(tablet) {
      margin-left: 0;
    }

    @include breakpoint(desktop-lg) {
      transform: translateY(-140px);
    }

    button {
      text-shadow: none;
      height: 75px;
      width: 75px;
      border-radius: 100%;
    }
  }

  .resume-form {
    display: flex;
    flex-direction: column;
    margin-bottom: 20px;

    &.reviewing {

      + .c-form-nav {
        transform: translateY(-193px);

        @include breakpoint(desktop-lg) {
          transform: translateY(-214px);
        }
      }

      .segment .c-contact-items {

        @include breakpoint(tablet) {
          margin-bottom: 40px;
        }
      }
    }

    button {
      width: 100%;
      margin-top: 25px;
    }

    .segment.phase-zero {
      margin-bottom: 0;
    }

    .segment,
    .segment .c-form-list {
      margin-bottom: 25px;
      transition: all 0.7s;

      @include breakpoint(desktop-lg) {
        margin-bottom: 45px;
      }

      &.reviewing {
        &.phase-zero,
        &.phase-one,
        &.phase-two,
        &.phase-three,
        &.phase-four {
          &.in-review {
            position: relative;
            transform: translateX(0);
            opacity: 1;
            z-index: 2;
          }
        }
      }

      &.phase-zero,
      &.phase-one,
      &.phase-two,
      &.phase-three,
      &.phase-four {
        &.show {
          position: relative;
          transform: translateX(0);
          opacity: 1;
          z-index: 2;
          width: auto;
          height: auto;
          // display: block;
        }

        &.hidden {
          // display: none;
          position: absolute;
          opacity: 0;
          width: 0;
          height: 0;
          transform: translateX(100vw);
          z-index: -2;
        }

        &.transition-out {
          transform: translateX(-100vw);
          opacity: 0;

          &.right {
            transform: translateX(100vw);
          }
        }
      }

      .c-contractor {
        display: flex;
        align-items: center;
      }

      .c-show-contractor {
        display: flex;
        flex-direction: row;
        align-items: center;
        transition: all 0.3s;
        opacity: 1;

        &.hide-field {
          opacity: 0;
        }
      }

      .c-contractor-field {
        transition: all 0.3s;
        opacity: 1;
        height: 115px;

        &.hide-field {
          height: 0;
          opacity: 0;
        }
      }
      .c-contact-items {
        
        @include breakpoint(desktop-sm) {
          margin: 0 auto;
        }
      }

      .c-contact-items,
      .c-work-items,
      .c-project-items,
      .c-skill-row,
      .c-edu-items {
        background: #292929;
        overflow: hidden;
        border-radius: 70px;
        margin: 0 auto 40px;
        width: 58%;
        padding: 41px;

        @include breakpoint(tablet) {
          padding: 65px;
          width: auto;
        }

        @include breakpoint(desktop-sm) {
          padding: 55px;
          

          &:not(.c-skill-row) {
            margin-bottom: 40px;
          }
        }

        &.transition-out {
          .content-wrapper {
            height: 0;
          }
        }

        .content-wrapper {
          height: auto;
          transition: all 0.7s;
        }

        label,
        input,
        textarea {
          letter-spacing: $letter-space;
        }

        .c-contractor label {
          font-size: 0.7rem;
          margin-left: 0;

          @include breakpoint(desktop-sm) {
            font-size: 1rem;
          }

          &.contractor-label {
            margin-right: 10px;
          }
        }

        label {
          font-size: 1rem;
          font-weight: 900;
          display: inline-block;
          color: #cdcdcd;
          margin: 0 0 10px 15px;

          @include breakpoint(tablet) {
            font-size: 1.25rem;
          }
        }

        input {
          height: 43px;
        }

        input[type="checkbox"] {

          &:not(:checked) {
            background: linear-gradient(145deg, #333333, #1F1F1F);
            border-radius: 100%;
            box-shadow: 9.91px 9.91px 15px #151515, -9.91px -9.91px 15px #3E3E3E;
          }
        }

        input,
        textarea {

          &.contractor {
            width: 40px;
            height: 40px;
            cursor: pointer;
          }

          font-size: 1rem;
          margin-bottom: 15px;
          color: $white;
          caret-color: $white;
          margin-right: $ruler/2;
          box-shadow: inset 2px 2px 5px $color-shadow,
            inset -5px -5px 10px $color-white;
          width: 100%;
          box-sizing: border-box;
          transition: all 0.2s ease-in-out;
          appearance: none;
          -webkit-appearance: none;
          border: 0;
          outline: 0;
          border-radius: $ruler * 20;
          padding: $ruler;
          background-color: $color-bg;
          text-shadow: 1px 1px 0 $color-white;
          margin-bottom: 20px;

          @include breakpoint(tablet) {
            font-size: $ruler;
            height: auto;
          }
        }

        textarea {
          border-radius: 30px;
        }
      }
    }
  }

  button,
  i {
    border: 0;
    outline: 0;
    font-size: $ruler;
    border-radius: $ruler * 20;
    padding: $ruler;
    background-color: $color-bg;
    border-radius: $ruler/2;
    line-height: 0;
    width: $ruler * 3;
    height: $ruler * 3;
    display: inline-flex;
    justify-content: center;
    align-items: center;
    margin: 0 $ruler/2;
    font-size: $ruler * 1.2;
    color: #61677c;
    font-weight: bold;
    box-shadow: -5px -5px 20px $color-white, 5px 5px 20px $color-shadow;
    transition: all 0.2s ease-in-out;
    cursor: pointer;
    font-weight: 600;

    &:hover {
      box-shadow: -2px -2px 5px $color-white, 2px 2px 5px $color-shadow;
    }

    &:active {
      background: #272727;
      box-shadow: inset 21px 21px 49px #1a1a1a, inset -21px -21px 49px #343434;
    }
  }
}

